# multirepo-manager

./: .gitignore  README.md  setup.cfg
.github/workflows/: publish.yml
src/: __version__.py  cli.py  version.py
tests/: test_cli.py
