[metadata]
name = multirepo-manager
version = attr: src.version.__version__
author = Marcello De Giorgi
author_email = degiorgimarcello@gmail.com
description = CLI to manage multiple git repositories in the same folder
url = https://github.com/DeGiorgiMarcello/multirepo-manager
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    click == 8.1.*
    GitPython == 3.1.*
    python_dotenv == 1.0.*


[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    multirepo = src.cli:cli